# phobos-audio-host

./: .gitignore  CMakeLists.txt  ControlServer.cpp  ControlServer.h  Main.cpp  OscServer.cpp  README.md  build.bat  build.sh
Source/: ControlServer.cpp  ControlServer.h  DawGraph.cpp  DawGraph.h  FilePlayerNode.h  Logger.cpp  Logger.h  Main.cpp  MidiChannelFilter.h  OscServer.cpp  OscServer.h  PluginScanner.cpp  PluginScanner.h  PluginUi.cpp  PluginUi.h  SchedulerNode.h
